# rustylife

./: Cargo.toml  LICENSE  README.md  package-lock.json  package.json  webpack.config.js
docs/: 0.worker.js  1.worker.js  index.html  main.js  worker.js
src/: display.rs  game.rs  index.html  inputs.rs  lib.rs  main.js  scope.rs  stats.rs  util.rs  worker.js
src/games/: demo.rs  life.rs  mod.rs
